# diff_to_ackermann

diff_to_ackermann/: CMakeLists.txt  README.md  install_service.sh  package.xml
diff_to_ackermann/launch/: diff_to_ack.service
diff_to_ackermann/src/: diff_to_ackermann_node.cpp
diff_to_ackermann/videos/: circle.webm  pure_rotation.webm
